Whitespace bug fix test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+html,body {
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	padding: 1px;
+	overflow-x: hidden;
+}
 * {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
